feat: 集成 JWT 校验

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -22,3 +22,8 @@ Database:
   ParseTime: True
   MaxIdleConns: 10
   MaxOpenConns: 30
+
+JWT:
+  Secret: mneumi
+  Issuer: gin-boilerplate
+  Expire: 7200
